syntax = "proto3";

service ClientService {
    rpc RegisterNewClient(NewClientRequest) returns (NewClientResponse) {}
    rpc UnregisterClient(UnregisterClientRequest) returns (UnregisterClientResponse) {}
    rpc NewTransactions(NewTransactionsRequest) returns (NewTransactionsResponse) {}
}

message NewClientRequest {
    message SubInfo {
        string type = 1;
        bytes value = 2;
    }
    string address = 1;
    map<string, SubInfo> sub_infos = 2;
}

message NewClientResponse {
    int32 status = 1;
}

message UnregisterClientRequest {
    string address = 1;
}

message UnregisterClientResponse {
    int32 status = 1;
}

message NewTransactionsRequest {
    message Transaction {
        bytes raw_transaction = 1;
        bytes hash = 2;
        bytes to = 3;
    }
    message Transactions {
        repeated Transaction list = 1;
    }
    string client = 1;
    map<string, Transactions> transactions = 2;
}

message NewTransactionsResponse {
    int32 status = 1;
}
